tienda virtual responsive

--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
             <p id="infoProducto"></p>
             <button id="OcultarInformacion">Ocultar Informacion ↖</button>
         </article>
-        <section>
-            <video src=""></video>
+        <section class="videoSection">
+            <video src="" class="video" controls ></video>
         </section>
         <div class="links tiendaVirtual">
-            <a href="https://www.mercadolibre.com.ar/" target="_blank">Consegui nuestros productos en Bru-Dan (e-commerce)</a>
+            <a href="https://www.mercadolibre.com.ar/" target="_blank"><p>Consegui nuestros productos en MatesBruDan.com.ar</p>
+                <img src="img/brudan-tienda.png" alt="tienda-brudan">
+            </a>
+            
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="transform: rotateX(180deg) ; margin-top: -10px;z-index: 300;">
             <path fill="#917c67" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,69.3C384,64,480,64,576,96C672,128,768,192,864,202.7C960,213,1056,171,1152,149.3C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
