--- a/index.html
+++ b/index.html
@@ -96,7 +96,22 @@
     <section id="Empresas">
         <header class="headerSection" style="background-color: #352504;"></header>
         <h2 class="headerSectionText" style="background-color: #352504;">Productos exclusivos para tu empresa</h2>
-        <div class="productosBody"></div>
+        <article class="textoProductos">LLeva el merchandising de tu empresa a dar un salto de calidad. <br><br> Si estas pensando en un presente para tus clientes o simplemente un souvenir con su compra, estas opciones son las que estabas buscando:</article>
+        <section class="galleryEmpresas">
+            <button id="scrollLeft" class="scrollButtons"> < </button>
+            <div id="img-container">
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="" id="img-container-firstImg">
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">\
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
+            </div>
+            <button id="scrollRight" class="scrollButtons"> > </button>
+        </section>
+        <article class="textoProductos"><br>Contactanos para pedirnos diseño y presupuesto.</article>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-bottom: -6%;">
             <path fill="rgb(31, 22, 4)" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,69.3C384,64,480,64,576,96C672,128,768,192,864,202.7C960,213,1056,171,1152,149.3C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
@@ -104,7 +119,6 @@
     <section id="Mayorista">
         <header class="headerSection" style="background-color: rgb(31, 22, 4);"></header>
         <h2 class="headerSectionText" style="background-color: rgb(31, 22, 4);">¿Queres vender nuestros productos? Contactanos</h2>
-        <div class="productosBody"></div>
     </section>
     <footer></footer>
     <script src="js/main.js"></script>
