--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div id="Wellcome" fetchPriority="High">
+    <div id="Wellcome" fetchPriority="High">
         <img src="img/ElRemanso.png" alt="Regionales El Remanso Logo" fetchPriority="High">
         <h1>EL REMANSO</h1>
         <p>DISTRIBUCION DE ARTESANIAS</p>
@@ -87,7 +87,7 @@
             
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="transform: rotateX(180deg) ; margin-top: -10px;z-index: 300;">
-            <path fill="#917c67" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,69.3C384,64,480,64,576,96C672,128,768,192,864,202.7C960,213,1056,171,1152,149.3C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+            <path fill="#646044" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,69.3C384,64,480,64,576,96C672,128,768,192,864,202.7C960,213,1056,171,1152,149.3C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -25%; margin-bottom: -6%; transform: rotateY(180deg) ;">
             <path fill="#352504" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,69.3C384,64,480,64,576,96C672,128,768,192,864,202.7C960,213,1056,171,1152,149.3C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
@@ -104,7 +104,7 @@
                 <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
                 <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
                 <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
-                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">\
+                <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
                 <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
                 <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
                 <img src="img/set-matero-Mercedes-Benz.jpg" alt="">
@@ -117,10 +117,28 @@
         </svg>
     </section>
     <section id="Mayorista">
-        <header class="headerSection" style="background-color: rgb(31, 22, 4);"></header>
+        <header class="headerSection" style="background-color: #1f1604;"></header>
         <h2 class="headerSectionText" style="background-color: rgb(31, 22, 4);">¿Queres vender nuestros productos? Contactanos</h2>
     </section>
-    <footer></footer>
+    <footer>
+        <section>
+            <a href="https://www.mercadolibre.com.ar/" target="_blank" class="linkimg"><img src="img/brudanlogo.png" alt="Brudan tienda" class=""></a>
+            <a href="#Inicio" class="linkimg"><img src="img/ElRemansologo.png" alt="Regionales El Remanso Logo" class=""></a>
+        </section>
+        <section>
+            <a itemprop="telephone" href="tel:" rel="nofollow">
+                <span>0344415406441</span>
+            </a>
+            <a class="header--custom-text" itemprop="email" href="mailto:sergiofinaargentina@gmail.com" rel="nofollow">
+                <span>sergiofinaargentina@gmail.com</span>
+            </a>
+            <div style="width: 50%; display: flex; justify-content: space-around;">
+                <img style="width: 20%;" src="/img/ElRemanso.png" alt="">
+                <img style="width: 20%;" src="/img/ElRemanso.png" alt="">
+                <img  style="width: 20%;" src="/img/ElRemanso.png" alt="">
+            </div>
+        </section>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
